--- a/static/tables.css
+++ b/static/tables.css
@@ -3,9 +3,10 @@ table {
   background-color: #EAEDEF;
   margin-bottom: (8px*2);
   //HTML table reset
-  table-layout: fixed;
+  table-layout: auto;
   border-collapse: collapse;
   border-spacing: 0;
+  width: 100% ;
 }
 p {
   margin: 10;
@@ -26,4 +27,8 @@ td, th {
   border-right: solid 1px #788E9A;
   padding: 2px;
   text-align: inherit;
+}
+
+input, select, textarea {
+  width: 100% ;
 }
